Add IdeaVim configuration

--- a/Emacs.org
+++ b/Emacs.org
@@ -502,14 +502,15 @@ See [[https://orgmode.org/manual/Structure-Templates.html][Structure Templates]]
   ;; Required as of Org 9.2
   (require 'org-tempo)
 
-  (add-to-list 'org-structure-template-alist '("sh" . "src sh"))
+  (add-to-list 'org-structure-template-alist '("cpp" . "src cpp"))
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
-  (add-to-list 'org-structure-template-alist '("sc" . "src scheme"))
-  (add-to-list 'org-structure-template-alist '("ts" . "src typescript"))
-  (add-to-list 'org-structure-template-alist '("py" . "src python"))
   (add-to-list 'org-structure-template-alist '("go" . "src go"))
-  (add-to-list 'org-structure-template-alist '("yaml" . "src yaml"))
   (add-to-list 'org-structure-template-alist '("json" . "src json"))
+  (add-to-list 'org-structure-template-alist '("py" . "src python"))
+  (add-to-list 'org-structure-template-alist '("sc" . "src scheme"))
+  (add-to-list 'org-structure-template-alist '("sh" . "src sh"))
+  (add-to-list 'org-structure-template-alist '("ts" . "src typescript"))
+  (add-to-list 'org-structure-template-alist '("yaml" . "src yaml"))
 
 #+end_src
 
@@ -562,6 +563,6 @@ You can toogle markup hiding with =C-c C-x C-m=.
     ;; (setq-default markdown-header-scaling t)
     (setq-default markdown-list-indent-width 2
                   markdown-footnote-location 'immediately
-                  markdown-hide-markup t))
+                  markdown-hide-markup nil))
 
 #+end_src
