Emacs: UI tweaks; add indentation info to doom-modeline

--- a/Emacs.org
+++ b/Emacs.org
@@ -163,7 +163,7 @@ Unnecesary visual elements have been disabled, but the menu bar can be helpful w
 
   (set-face-attribute 'default nil :font "Iosevka" :height 160)
   (set-face-attribute 'fixed-pitch nil :font "Iosevka" :height 160)
-  (set-face-attribute 'variable-pitch nil :font "Noto Sans" :height 150)
+  (set-face-attribute 'variable-pitch nil :font "Lato" :height 160)
 
 #+end_src
 
@@ -226,7 +226,11 @@ Show Paren mode highlights matching delimiters. [[https://github.com/Fanael/rain
 
   (use-package doom-modeline
     :init (doom-modeline-mode 1)
-    :custom ((doom-modeline-height 40)))
+    :custom ((doom-modeline-height 40)
+             (doom-modeline-indent-info t)))
+
+  (set-face-attribute 'mode-line nil :font "Source Sans Pro" :height 160)
+  (set-face-attribute 'mode-line-inactive nil :font "Source Sans Pro" :height 160)
 
 #+end_src
 
@@ -435,15 +439,15 @@ The =efs/org-font-setup= function adjusts the sizes of headings and uses variabl
                                (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
 
     ;; Set faces for heading levels
-    (dolist (face '((org-level-1 . 1.4)
-                    (org-level-2 . 1.2)
-                    (org-level-3 . 1.1)
+    (dolist (face '((org-level-1 . 1.6)
+                    (org-level-2 . 1.4)
+                    (org-level-3 . 1.2)
                     (org-level-4 . 1.1)
                     (org-level-5 . 1.1)
                     (org-level-6 . 1.1)
                     (org-level-7 . 1.1)
                     (org-level-8 . 1.1)))
-      (set-face-attribute (car face) nil :font "Cantarell" :weight 'regular :height (cdr face)))
+      (set-face-attribute (car face) nil :font "Lato" :weight 'regular :height (cdr face)))
 
     ;; Ensure that anything that should be fixed-pitch in Org files appears that way
     (set-face-attribute 'line-number nil :inherit 'fixed-pitch)
@@ -469,6 +473,7 @@ This section contains the basic configuration for Org mode. I'm leaving a lot ou
     (org-indent-mode)
     (variable-pitch-mode 1)
     (visual-line-mode 1)
+    (setq org-list-indent-offset 2)
     (setq evil-auto-indent nil))
 
   (use-package org
@@ -520,6 +525,9 @@ See [[https://orgmode.org/manual/Structure-Templates.html][Structure Templates]]
 
 *** C/C++
 
+/Maximum line length:  80/
+/Indentation: 2 spaces/
+
 [[https://www.gnu.org/software/emacs/manual/html_node/ccmode/index.html][CC Mode]] is a built-in Emacs mode for editing C, C++, Java, and several other languages.
 
 #+begin_src emacs-lisp
@@ -563,6 +571,7 @@ You can toogle markup hiding with =C-c C-x C-m=.
     ;; (setq-default markdown-header-scaling t)
     (setq-default markdown-list-indent-width 2
                   markdown-footnote-location 'immediately
+                  markdown-hide-urls t
                   markdown-hide-markup nil))
 
 #+end_src
