--- a/Emacs.org
+++ b/Emacs.org
@@ -27,7 +27,7 @@ Some  useful commands:
 
 #+begin_src emacs-lisp
 
-  ;; straight.el bootstrap code
+  ;; straight.el bootstrap script
   (defvar bootstrap-version)
   (let ((bootstrap-file
          (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
@@ -48,25 +48,6 @@ Some  useful commands:
   ;; unless specified otherwise.
   ;; This is analogous to setting =use-package-always-ensure= with =package.el=
   (setq straight-use-package-by-default t)
-
-#+end_src
-
-** Automatic Package Updates
-
-The [[https://github.com/rranelli/auto-package-update.el][auto-package-update]] package helps keep your Emacs packages up to date.  It will prompt you after a certain number of days, either at startup or at a specific time of day, to remind you to update your packages.
-
-You can also update at any time using =M-x auto-package-update-now=.
-
-#+begin_src emacs-lisp
-
-  (use-package auto-package-update
-    :custom
-    (auto-package-update-interval 7)
-    (auto-package-update-prompt-before-update t)
-    (auto-package-update-hide-results nil)
-    :config
-    (auto-package-update-maybe)
-    (auto-package-update-at-time "09:00"))
 
 #+end_src
 
@@ -470,6 +451,7 @@ Note that both git-gutter-fringe and diff-hl will conflict with other modes that
 #+begin_src emacs-lisp
 
   (use-package git-gutter
+    ;;:straight git-gutter-fringe
     :diminish
     :hook ((text-mode . git-gutter-mode)
            (prog-mode . git-gutter-mode))
